clean all into a nice checking R package

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -2,8 +2,14 @@
 
 export(fast_unibisect)
 export(multinewton)
+export(simple_multinewton)
 export(simple_unibisect)
+export(simple_uninewton)
+export(simple_unisecant)
 export(unibisect)
 export(uninewton)
 export(unisecant)
+import(ggplot2)
+import(mpoly)
 importFrom(tibble,data_frame)
+importFrom(tibble,tibble)
