--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,14 +1,14 @@
 Package: kumerical
 Type: Package
-Title: What the Package Does (Title Case)
-Version: 0.1.0
-Author: Who wrote it
-Maintainer: The package maintainer <yourself@somewhere.net>
-Description: More about what it does (maybe more than one line)
-    Use four spaces when indenting paragraphs within the Description.
-License: What license is it under?
+Title: Numerical Algorithms in R
+Version: 0.0.0
+Authors@R: person("David", "Kahle", email = "david.kahle@gmail.com", role = c("aut", "cre"), comment = c(ORCID = "0000-0002-9999-1558"))
+Description: Implementations of basic numerical algorithms.
+Imports:
+  mpoly,
+  ggplot2,
+  tibble
+License: GPL-2
 Encoding: UTF-8
 LazyData: true
-Imports: Rcpp (>= 0.12.13)
-LinkingTo: Rcpp
 RoxygenNote: 6.0.1
